--- a/src/app/shared/components/day-card/day-card.component.scss
+++ b/src/app/shared/components/day-card/day-card.component.scss
@@ -3,10 +3,18 @@ mat-card {
   &:focus {
     outline: -webkit-focus-ring-color auto 0;
   }
+
   .mat-icon-button.small-button {
     width: 22px;
     height: 22px;
     line-height: 22px;
+  }
+
+  .card-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .date-container {
@@ -18,6 +26,10 @@ mat-card {
   }
 
   .student-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
     flex-basis: 100%;
 
     .avatar-container {
@@ -40,26 +52,76 @@ mat-card {
 
   .day-content-container {
 
-    .day-content {
-      // width: calc(100% - 2.2rem);
-    }
-
     .day-title {
-      line-height: 1.2;
+      line-height: 1.4;
+      word-break: break-word;
     }
-
 
     .day-content-text {
       width: 100%;
+      word-break: break-word;
     }
 
-    .action-buttons {
-      // flex: 0 0 125px;
+    .action-buttons button {
+      margin-right: -5px;
+      margin-bottom: -5px;
+    }
+  }
+}
 
-      button {
-        margin-right: -5px;
-        margin-bottom: -5px;
+mat-card.grid {
+  display: flex !important;
+  flex-direction: column;
+  height: 100%;
+  padding: 1rem !important;
+  box-sizing: border-box;
+
+  .card-header {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 0 !important;
+
+    .date-container {
+      flex: inherit;
+      margin-left: 0 !important;
+    }
+
+    .student-container {
+      align-self: flex-end;
+      margin-top: 1rem !important;
+      width: 100%;
+
+      a {
+        font-size: .85rem;
+      }
+
+      .avatar-container {
+        flex: 0 0 1.7rem;
+
+        &.archived {
+          flex: 0 0 3.3rem;
+        }
+
+        img.avatar {
+          width: 100%;
+          max-width: 100%;
+        }
+      }
+
+      .menu-options {
+        position: absolute;
+        top: 5px;
+        right: 5px;
       }
     }
+  }
+
+  .day-content-container {
+    margin-top: .5rem;
+  }
+
+  .day-title {
+    font-size: 1.1rem;
   }
 }
