--- a/src/app/classroom/daily/components/day-list/day-list.component.scss
+++ b/src/app/classroom/daily/components/day-list/day-list.component.scss
@@ -1,11 +1,81 @@
-.first-of-month {
+.card-container {
   margin-top: 1rem;
 
-  &:first-child {
-    margin-top: 0;
-  }
+  .first-of-month {
+    margin-top: 1rem;
 
-  &.mat-button span {
-    text-transform: capitalize;
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &.mat-button span {
+      text-transform: capitalize;
+    }
   }
 }
+
+.switch-layout-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.grid-layout {
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    // margin-bottom: 2rem;
+  }
+
+  a13-day-card {
+    width: 100%;
+    // height: 200px;
+    max-width: calc(100% / 3);
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    padding-left: 0;
+    padding-right: 1rem;
+    box-sizing: border-box;
+
+    &:nth-child(3n+3) {
+      padding-right: 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 960px) {
+
+  .grid-layout .card-container a13-day-card {
+    max-width: calc(100% / 2);
+    padding-right: 1rem;
+
+    &:nth-child(odd) {
+      padding-right: .5rem;
+    }
+
+    &:nth-child(even) {
+      padding-left: .5rem;
+      padding-right: 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  .grid-layout .card-container a13-day-card {
+    max-width: 100%;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
+// @media only screen and (max-width: 460px) {
+
+//   .grid-layout .card-container a13-student-card {
+//     max-width: 100%;
+//     padding-left: 0 !important;
+//     padding-right: 0 !important;
+//   }
+// }
