--- a/src/app/classroom/students/components/student-card/student-card.component.html
+++ b/src/app/classroom/students/components/student-card/student-card.component.html
@@ -30,7 +30,7 @@
 
       <!-- Instrument -->
       <div *ngIf="grid && student?.musical?.instrument" class="instrument mt-h">
-        <fa-icon class="mr-h mat-icon-14 mat-hint" icon="music"></fa-icon>
+        <fa-icon class="mr-q mat-icon-14 mat-hint" icon="music"></fa-icon>
         {{'INSTRUMENT.' + student?.musical?.instrument?.viewValue | translate}}
       </div>
     </div>
