--- a/src/scss/theming.scss
+++ b/src/scss/theming.scss
@@ -41,6 +41,20 @@
     }
   }
 
+  .table table {
+    border-color: #e3e3e3;
+    background-color: white;
+
+    th {
+      background-color: #f8f8f8;
+    }
+
+    th,
+    td {
+      border-color: #e3e3e3;
+    }
+  }
+
   .icon-button,
   .badge {
     background-color: darken(map-get(map-get($colors, light-theme), background), 2%);
@@ -128,6 +142,20 @@
 
     &.progress:before {
       background-image: linear-gradient(90deg, rgba(70, 70, 70, 0), rgba(70, 70, 70, .6), rgba(70, 70, 70, 0));
+    }
+  }
+
+  .table table {
+    border-color: #444;
+    background-color: #2a2a2a;
+
+    th {
+      background-color: #252525;
+    }
+
+    th,
+    td {
+      border-color: #444;
     }
   }
 
