--- a/src/scss/modified-components.scss
+++ b/src/scss/modified-components.scss
@@ -174,7 +174,7 @@ ngx-skeleton-loader.skeleton .loader {
     min-width: 800px;
     box-sizing: border-box;
     border-collapse: collapse;
-    border: 1px solid transparent;
+    border: 0px solid transparent;
 
     thead {
       th {
@@ -187,7 +187,15 @@ ngx-skeleton-loader.skeleton .loader {
     td {
       text-align: inherit;
       padding: .75rem;
-      border: 1px solid transparent;
+      border-bottom: 1px solid transparent;
+    }
+
+    tbody tr:last-child {
+
+      th,
+      td {
+        border-bottom-width: 0;
+      }
     }
   }
 }
