--- a/src/scss/modified-components.scss
+++ b/src/scss/modified-components.scss
@@ -174,6 +174,7 @@ ngx-skeleton-loader.skeleton .loader {
     min-width: 800px;
     box-sizing: border-box;
     border-collapse: collapse;
+    table-layout: auto;
     border: 0px solid transparent;
 
     thead {
@@ -188,6 +189,7 @@ ngx-skeleton-loader.skeleton .loader {
       text-align: inherit;
       padding: .75rem;
       border-bottom: 1px solid transparent;
+      max-width: 140px;
     }
 
     tbody tr:last-child {
