avatar border on hover

--- a/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
+++ b/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
@@ -20,7 +20,7 @@
 
         <!-- Header info -->
         <div fxLayout="row" fxLayoutAlign="start center">
-          <a class="avatar border-theme mr-h aumente" [routerLink]="[ '/classroom/student', day?.studentId ]">
+          <a class="avatar avatar-button border-theme border-theme-button mr-h" [routerLink]="[ '/classroom/student', day?.studentId ]">
             <img class="avatar-image p-0 mr-1" [src]="day?.student?.personal?.avatar | srcImage" alt="Avatar">
           </a>
 
