--- a/src/app/classroom/students/components/student-card/student-card.component.scss
+++ b/src/app/classroom/students/components/student-card/student-card.component.scss
@@ -61,7 +61,7 @@ mat-card.grid {
       max-width: 140px;
       margin-top: 1rem;
       margin-right: 0 !important;
-      border-radius: 0;
+      // border-radius: 0;
     }
   }
 
