--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
@@ -16,6 +16,10 @@
   .action-buttons button {
     margin-top: -10px;
   }
+
+  fa-icon.header-icon {
+    width: 1.2rem !important;
+  }
 }
 
 .profile-tabs {
