--- a/src/scss/theming.scss
+++ b/src/scss/theming.scss
@@ -43,12 +43,12 @@
   }
 
   .table table {
-    // border-color: #e3e3e3;
+    border-color: #eee;
     background-color: white;
 
     th {
       background-color: #f8f8f8;
-      // border-color: #eee;
+      border-color: #eee;
     }
 
     td {
@@ -147,11 +147,12 @@
   }
 
   .table table {
-    // border-color: #444;
+    border-color: #333;
     background-color: #2a2a2a;
 
     th {
       background-color: #252525;
+      border-color: #333;
     }
 
     td {
