--- a/src/scss/modified-components.scss
+++ b/src/scss/modified-components.scss
@@ -95,6 +95,14 @@ ngx-skeleton-loader.skeleton .loader {
   transition: opacity .6s cubic-bezier(.25, .8, .25, 1);
 }
 
+// Matlist
+.sidenav-container {
+  .mat-list-base .mat-list-item .mat-list-item-content,
+  .mat-list-base .mat-list-option .mat-list-item-content {
+    padding: 0 .5rem;
+  }
+}
+
 // CKEditor
 .angular-editor {
   width: 100%;
