--- a/src/app/classroom/students/components/student-list/student-list.component.scss
+++ b/src/app/classroom/students/components/student-list/student-list.component.scss
@@ -38,7 +38,7 @@ mat-form-field {
   .grid-layout .card-container a13-student-card {
     max-width: 50%;
     padding-top: .3rem;
-    padding-bottom: .3rem;
+    padding-bottom: 1rem;
 
     &:nth-child(odd) {
       padding-right: .3rem;
