--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -293,13 +293,15 @@
   a13-student-card,
   a13-day-card {
     width: 100%;
-    // height: 200px;
-    max-width: calc(100% / 3);
     padding-top: .5rem;
     padding-bottom: .5rem;
     padding-left: 0;
     padding-right: 1rem;
     box-sizing: border-box;
+  }
+
+  a13-day-card {
+    max-width: calc(100% / 3);
 
     &:nth-child(3n+3) {
       padding-right: 0;
