--- a/src/app/classroom/user-profile/components/user-profile/user-profile.component.html
+++ b/src/app/classroom/user-profile/components/user-profile/user-profile.component.html
@@ -1,11 +1,11 @@
 <!-- Skeleton -->
 <ng-template #userSkeleton>
-  <div fxLayout="row" fxLayoutAlign="start center" class="skeleton container-max sm mt-h">
+  <div fxLayout="column" fxLayoutAlign="start center" class="skeleton padding-content container-max sm mt-1">
     <div>
-      <ngx-skeleton-loader count="1" appearance="circle" [animation]="skeleton.animation" [theme]="skeleton.circle.theme"></ngx-skeleton-loader>
+      <ngx-skeleton-loader count="1" appearance="circle" [animation]="skeleton.animation" [theme]="skeleton.circleBig.theme"></ngx-skeleton-loader>
     </div>
-    <div fxFlex="100">
-      <ng-container *ngFor="let loader of skeleton.lines">
+    <div class="full mt-2">
+      <ng-container *ngFor="let loader of skeleton.linesUser">
         <ngx-skeleton-loader class="skeleton" fxLayout="column" [animation]="skeleton.animation" [theme]="loader.theme"></ngx-skeleton-loader>
       </ng-container>
     </div>
@@ -16,7 +16,7 @@
 <form *ngIf="user" [formGroup]="userFormGroup" autocomplete="off" class="mat-typography" class="container container-nopadd">
 
   <!-- Header -->
-  <header class="padding-content-v" fxLayout="column" fxLayoutAlign="start center">
+  <header class="padding-content" fxLayout="column" fxLayoutAlign="start center">
     <a matRipple class="avatar avatar-button border-theme border-theme-button mt-1 mb-2">
       <img class="avatar-image" [src]="user.avatar || ('' | srcImage)" (click)="changeAvatar(user)">
     </a>
@@ -26,8 +26,8 @@
   </header>
 
   <!-- Content -->
-  <div class="container-max sm mt-2">
-    <section class="padding-content-h">
+  <div class="container-max sm mt-2 padding-content">
+    <section>
 
       <!-- Name -->
       <mat-form-field [appearance]="'inputAppearance' | settingValue">
