--- a/src/app/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/authentication/components/sign-in/sign-in.component.html
@@ -36,7 +36,7 @@
 
 <!-- SignIn RS buttons -->
 <div fxLayout="row" fxLayoutGap="1rem">
-  <button tabindex="{{4+i}}" fxFlex="33" *ngFor="let social of signInSocialNetworks; let i = index" mat-stroked-button (click)="signInWithSocial(social.id)" attr.arial-label="{{social.txt | translate}}">
+  <button type="button" tabindex="{{4+i}}" fxFlex="33" *ngFor="let social of signInSocialNetworks; let i = index" mat-stroked-button (click)="signInWithSocial(social.id)" attr.arial-label="{{social.txt | translate}}">
     <img [src]="'/assets/svgs/social/' + social.icon + '.svg'" class="mat-icon-24" [alt]="'Logo ' + social.id">
   </button>
 </div>
