Coming soon translate

--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -171,7 +171,7 @@
           <fa-icon class="mat-icon-20" icon="poll"></fa-icon>
         </ng-template>
         <div class="padding-content">
-          <p>Proximamente aquí aparecerán las {{'MARKS' | translate}}</p>
+          <p class="txt-3 mt-3 txt-center mat-hint">{{'COMING_SOON' | translate}}...</p>
         </div>
       </mat-tab>
     </mat-tab-group>
